add privacy policy, cleanup posts

--- a/_posts/2019-08-11-on-games.md
+++ b/_posts/2019-08-11-on-games.md
@@ -7,6 +7,8 @@ tags: games
 
 Aside from programming and whatnot, I also enjoy gaming.  Here's what I've been playing lately in no particular order.
 
+<!--more-->
+
 ## Dragon Quest Builders 2
 
 <span class="card-1 card-2">
